# pre-commit-latex-hooks

./: .mypy.ini  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .typos.toml  Cargo.toml  README.md  setup.py
latexhooks/: consistent_spelling.py  sort_bib.py  unique_labels.py
tests/: cleveref-capitalization.tex  section-labels.tex
