[package]
name = "pre-commit-latex-hooks"
version = "1.1.1"
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ensure-labels"
path = "src/bin/ensure-labels.rs"

[dependencies]
once_cell = "1.2.0"
regex = "1.5.5"
slug = "0.1.4"
structopt = "0.3.7"

[dev-dependencies]
pretty_assertions = "0.6.1"
