[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "pre-commit-latex-hooks"
version = "1.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ensure-labels"
path = "src/bin/ensure-labels.rs"

[dependencies]
clap = {version = "3.1.18", features = ["derive"]}
once_cell = "1.2.0"
regex = "1.5.5"
slug = "0.1.4"

[dev-dependencies]
pretty_assertions = "1.2.0"
