[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "pre-commit-latex-hooks"
version = "1.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ensure-labels"
path = "src/bin/ensure-labels.rs"

[dependencies]
clap = {version = "4.1.4", features = ["derive"]}
once_cell = "1.14.0"
regex = "1.6.0"
slug = "0.1.4"

[dev-dependencies]
pretty_assertions = "1.3.0"
